# Gold-Miner

./: .env.example  .gitignore  README.md  check_html.py  check_js_syntax.py  create_test_user.py  extract_and_check_js.py  package-lock.json  package.json  pyproject.toml  query_table_schema.py  start_server.sh  test_api_calls.py  test_button.js  test_improvements.py  test_skills_loading.py  update_correct_table.py  update_knowledge.py  update_single_table.py
.learnings/: ERRORS.md  FEATURE_REQUESTS.md  LEARNINGS.md
deploy/: README.md  ecs_deploy.sh  ecs_setup_service.sh
docs/: AGENT_RESEARCH_LITERATURE.md  PRD_AUTH_SYSTEM.md  PROJECT_GUIDE.md  business_knowledge_system.md  feishu_document.md  multi_session_concurrency_design.md
examples/: analysis_request.md
knowledge/glossary/: ad_engine_architecture.yaml  core_terms.yaml
knowledge/rules/: query_rules.yaml
plans/: plan_20260318_141159_8182dfe4.md
skills/: SKILL.md  feishu_notify.py  feishu_server.py  self_improvement.py  tavily_search.py
system_prompts/: agents.md  identity.md  memory.md  sould.md  user.md
tests/: agent_work_log.txt  test_agent.py  test_business_knowledge.py  test_cli_chat.py  test_compare_sql_methods.py  test_config.py  test_desc_format.py  test_execute_sql_with_priority.py  test_explore_table.py  test_frontend.py  test_harness.py  test_imports.py  test_llm.py  test_memory.py  test_odps_table.py  test_report.py  test_self_improvement_dedup.py  test_session.py  test_skill_integration.py  test_skills.py  test_task_planner.py
ui/: api_v2.py  app.py  auth_routes.py
(+172 files in other folders)
